feat(swagger): add settings swagger endpoint user
